--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# Build directory
+build/
+
+# CMake generated files
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+Makefile
+
+# Qt MOC files
+*_autogen/
+*.moc
+mocs_compilation.cpp
+
 # Prerequisites
 *.d
 
@@ -36,6 +50,30 @@
 *.exe
 *.out
 *.app
+dave
+dave.exe
 
 # debug information files
 *.dwo
+
+# IDE files
+.vscode/
+*.xcodeproj/
+*.xcworkspace/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+*~
+
+# Log files
+*.log
